Fri Aug  7 23:58:52 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-group-by.rb: [SR#102] mgroup_by対応

Fri Aug  7 22:50:09 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: [SR#126] mapfで配列に展開しない.

Fri Aug  7 21:37:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-inject.rb, n-inject.rb, controller.rb: [SR#102] inject対応
	* bjob.rb: Bjob#create_nodes: ブロックがnjobを返すようにした

Wed Aug  5 22:38:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* varray.rb: [BUG#131] VArray#index_on_arrayを直した.

Wed Aug  5 22:17:57 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-there.rb, controller.rb, n-there.rb, file-place.rb: [SR#102]
	  there対応

Wed Aug  5 20:32:03 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-input-iota.rb, controller.rb, n-input-iota.rb, file-place.rb:
	  [SR#102] iota対応

Wed Aug  5 18:44:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-barrier.rb, n-barrier.rb, n-filter.rb: [SR#102] barrier対応

Fri Jul 31 22:23:41 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-zipper.rb, controller.rb, zipper.rb, n-zipper.rb: [SR#102] zip対応

Wed Jul 22 21:45:47 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bjob.rb: Bjob#each_node がデッドロックしないようにした.

Wed Jul 22 17:59:53 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* sort19.rb: [SR#102] sort_by対応
	* n-group-by.rb: hash_optimizeオプションを受け付けられるようにした. 
	  hash_optimizeでも, Pool変数が使えるようにした.

Wed Jul 22 17:25:35 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-each-element-selector.rb: [SR#102] select対応

Wed Jul 22 17:19:02 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, b-input-varray.rb, n-input-varray.rb,
	  file-place.rb: [SR#102] input-varray 対応

Wed Jul 22 16:33:06 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-output-varray.rb: [SR#102] output-varray 対応
	* b-file-output.rb: ゴミ削除

Wed Jul 22 16:04:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, b-shuffle.rb, n-identity.rb: [SR#102] shuffle対応
