@@ -9,34 +9,46 @@ module Fairy
     def initialize(processor, bjob, opts, block_source)
       super
       @block_source = block_source
-      @map_proc = BBlock.new(@block_source, @context, self)
 
-      @find = false
-      @find_mutex = Mutex.new
+      @findp = false
+      @findp_mutex = Mutex.new
     end
 
-    def start
-      super do
-	@import.each do |e|
-	  # 見つかっていたら空読み
-	  @find_mutex.synchronize do
-	    next if @find 
-	    next unless find = @map_proc.yield(e)
-	    @export.push e
-	  end
+    def basic_each(&block)
+      @find_proc = BBlock.new(@block_source, @context, self)
+
+      @input.each do |e|
+	# 見つかっていたら空読み
+	@findp_mutex.synchronize do
+	  next if @findp
+	  next unless @findp = @find_proc.yield(e)
+	  block.call e
 	end
       end
     end
 
+#     def start
+#       super do
+# 	@import.each do |e|
+# 	  # 見つかっていたら空読み
+# 	  @find_mutex.synchronize do
+# 	    next if @find 
+# 	    next unless find = @map_proc.yield(e)
+# 	    @export.push e
+# 	  end
+# 	end
+#       end
+#     end
+
     def find_break
       @find_mutex.synchronize do
-	@find = true
+	@findp = true
       end
     end
   end
 
 
-  class NFindResult<NSingleExportFilter
+  class NFindResult<NFilter
     Processor.def_export self
 
     def initialize(*args)
@@ -45,6 +57,20 @@ module Fairy
       @value = :__FAIRY_NO_VALUE__
       @value_mutex = Mutex.new
       @value_cv = ConditionVariable.new
+    end
+
+    def input=(input)
+      super
+
+      start do
+	self.start_find
+      end
+    end
+
+    alias super_each each
+
+    def each(&block)
+      block.call value
     end
 
     def value
@@ -56,22 +82,20 @@ module Fairy
       end
     end
 
-    def start
-      super do
-	find = false
-	@import.each do |e|
-	  # 最初の要素以外空読み
-	  next if find 
-	  find = e
+    def start_find
+      find = false
+      @input.each do |e|
+	# 最初の要素以外空読み
+	next if find 
+	find = e
 
-	  @value = find
-	  @value_cv.broadcast 
-	  @export.push find
-	  # ちょっと気になる...
-	  @export.push END_OF_STREAM
+	@value = find
+	@value_cv.broadcast 
+	@export.push find
+	# ちょっと気になる...
+	@export.push END_OF_STREAM
 
-	  @bjob.update_find
-	end
+	@bjob.update_find
       end
     end
   end
